Fixed a heading spacing issue in wwa section

--- a/styles/refined-styles/text-formatting.css
+++ b/styles/refined-styles/text-formatting.css
@@ -21,10 +21,6 @@ h2 {
     line-height: 1;
 }
 
-#who-we-are h2 {
-    margin: 32px auto 0px auto;
-}
-
 #timeline h2 {
     margin-top: 50px;
 }
